linked contact us

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <footer>
         <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
+        <a href = "mailto:fvc9ch@virginia.edu">Contact Us!</a> 
     </footer>
 </body>
 </html>
