added other pages

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Hoos Exploring Physics</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#lessons">Lessons</a></li>
-                <li><a href="#games">Games</a></li>
-                <li><a href="#xperiments">Experiments</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="lessons.html">Lessons</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="experiments.html">Experiments</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -29,22 +29,25 @@
         <section id="lessons">
             <h2>Physics Lessons</h2>
             <p>Explore our engaging lessons on gravity, motion, energy, and more.</p>
+            <a href="lessons.html" class="button">Start Learning</a>
         </section>
 
         <section id="games">
             <h2>Games & Quizzes</h2>
             <p>Test your knowledge with fun physics games and quizzes.</p>
+            <a href="games.html" class="button">Play Now</a>
         </section>
 
         <section id="experiments">
             <h2>Hands-on Experiments</h2>
             <p>Try these simple and safe experiments at home!</p>
+            <a href="experiments.html" class="button">View Experiments</a>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
-        <a href = "mailto:fvc9ch@virginia.edu" target = "_blank">Contact Us!</a> 
+        <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
 </html>
