page and style updates

--- a/experiments.html
+++ b/experiments.html
@@ -25,44 +25,42 @@
             <h2>Hands-on Physics Experiments</h2>
             <div class="experiment-grid">
                 <div class="experiment-card">
-                    <h3>Paper Airplane Challenge</h3>
-                    <p>Learn about aerodynamics by designing and testing paper airplanes.</p>
+                    <h3>Experiment 1</h3>
+                    <p>Description of Experiment 1</p>
                     <ul class="materials">
-                        <li>Paper</li>
-                        <li>Ruler</li>
-                        <li>Measuring tape</li>
+                        <li>Material 1</li>
+                        <li>Material 2</li>
+                        <li>Material 3</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
                 <div class="experiment-card">
-                    <h3>Homemade Battery</h3>
-                    <p>Create a simple battery using household materials.</p>
+                    <h3>Experiment 2</h3>
+                    <p>Description of Experiment 2</p>
                     <ul class="materials">
-                        <li>Copper coins</li>
-                        <li>Zinc washers</li>
-                        <li>Cardboard</li>
-                        <li>Vinegar</li>
+                        <li>Material 1</li>
+                        <li>Material 2</li>
+                        <li>Material 3</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
                 <div class="experiment-card">
-                    <h3>Sound Wave Visualizer</h3>
-                    <p>Visualize sound waves using a simple setup.</p>
+                    <h3>Experiment 3</h3>
+                    <p>Description of Experiment 3</p>
                     <ul class="materials">
-                        <li>Plastic cup</li>
-                        <li>Balloon</li>
-                        <li>Rubber band</li>
-                        <li>Small mirror</li>
+                        <li>Material 1</li>
+                        <li>Material 2</li>
+                        <li>Material 3</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
                 <div class="experiment-card">
-                    <h3>Egg Drop Challenge</h3>
-                    <p>Design a container to protect an egg from breaking when dropped.</p>
+                    <h3>Experiment 4</h3>
+                    <p>Description of Experiment 4</p>
                     <ul class="materials">
-                        <li>Raw egg</li>
-                        <li>Various materials (straws, paper, tape)</li>
-                        <li>Scissors</li>
+                        <li>Material 1</li>
+                        <li>Material 2</li>
+                        <li>Material 3</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
@@ -71,7 +69,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
+        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
