--- a/lessons.html
+++ b/lessons.html
@@ -25,23 +25,23 @@
             <h2>Physics Lessons</h2>
             <div class="lesson-grid">
                 <div class="lesson-card">
-                    <h3>Forces and Motion</h3>
-                    <p>Learn about Newton's laws of motion, gravity, and how objects move.</p>
+                    <h3>Lesson 1</h3>
+                    <p>First Lesson to learn</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
                 <div class="lesson-card">
-                    <h3>Energy and Work</h3>
-                    <p>Explore different forms of energy and how they transform.</p>
+                    <h3>Lesson 2</h3>
+                    <p>Second Lesson to learn</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
                 <div class="lesson-card">
-                    <h3>Waves and Sound</h3>
-                    <p>Discover how waves travel and how we hear sound.</p>
+                    <h3>Lesson 3</h3>
+                    <p>Third Lesson to learn</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
                 <div class="lesson-card">
-                    <h3>Electricity and Magnetism</h3>
-                    <p>Learn about electric circuits and magnetic fields.</p>
+                    <h3>Lesson 4</h3>
+                    <p>Fourth Lesson to learn</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
             </div>
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
+        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
