--- a/games.html
+++ b/games.html
@@ -25,23 +25,23 @@
             <h2>Physics Games & Quizzes</h2>
             <div class="game-grid">
                 <div class="game-card">
-                    <h3>Gravity Runner</h3>
-                    <p>Run and jump through obstacles while learning about gravity!</p>
+                    <h3>Game 1</h3>
+                    <p>Description of Game 1</p>
                     <a href="#" class="button">Play Now</a>
                 </div>
                 <div class="game-card">
-                    <h3>Energy Quiz</h3>
-                    <p>Test your knowledge about different forms of energy.</p>
-                    <a href="#" class="button">Start Quiz</a>
+                    <h3>Game 2</h3>
+                    <p>Description of Game 2</p>
+                    <a href="#" class="button">Start Game</a>
                 </div>
                 <div class="game-card">
-                    <h3>Circuit Builder</h3>
-                    <p>Build working circuits and learn about electricity.</p>
+                    <h3>Game 3</h3>
+                    <p>Description of Game 3</p>
                     <a href="#" class="button">Play Now</a>
                 </div>
                 <div class="game-card">
-                    <h3>Motion Master</h3>
-                    <p>Solve physics puzzles using Newton's laws of motion.</p>
+                    <h3>Game 4</h3>
+                    <p>Description of Game 4</p>
                     <a href="#" class="button">Play Now</a>
                 </div>
             </div>
