--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <section id="home">
-            <h2>Welcome to Physics Fun Zone!</h2>
+            <h2>Welcome to Hoos Exploring Physics!</h2>
             <p>Learn physics through interactive lessons, fun games, and hands-on experiments!</p>
         </section>
 
@@ -40,13 +40,13 @@
 
         <section id="experiments">
             <h2>Hands-on Experiments</h2>
-            <p>Try these simple and safe experiments at home!</p>
+            <p>Try these simple and safe experiments in the classroom!</p>
             <a href="experiments.html" class="button">View Experiments</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
+        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
