--- a/experiments.html
+++ b/experiments.html
@@ -1,14 +1,19 @@
+<!-- Physics experiments page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character encoding and responsive viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics Experiments - Hoos Exploring Physics</title>
+    <!-- Link to shared stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header section with site title and navigation -->
     <header>
         <h1>Hoos Exploring Physics</h1>
+        <!-- Main navigation menu -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,47 +25,60 @@
         </nav>
     </header>
 
+    <!-- Main content area -->
     <main>
+        <!-- Experiments content section -->
         <section id="experiments-content">
             <h2>Hands-on Physics Experiments</h2>
+            <!-- Grid of experiment cards -->
             <div class="experiment-grid">
+                <!-- Paper Airplane experiment card -->
                 <div class="experiment-card">
-                    <h3>Experiment 1</h3>
-                    <p>Description of Experiment 1</p>
+                    <h3>Paper Airplane Challenge</h3>
+                    <p>Learn about aerodynamics by designing and testing paper airplanes.</p>
+                    <!-- List of required materials -->
                     <ul class="materials">
-                        <li>Material 1</li>
-                        <li>Material 2</li>
-                        <li>Material 3</li>
+                        <li>Paper</li>
+                        <li>Ruler</li>
+                        <li>Measuring tape</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
+                <!-- Homemade Battery experiment card -->
                 <div class="experiment-card">
-                    <h3>Experiment 2</h3>
-                    <p>Description of Experiment 2</p>
+                    <h3>Homemade Battery</h3>
+                    <p>Create a simple battery using household materials.</p>
+                    <!-- List of required materials -->
                     <ul class="materials">
-                        <li>Material 1</li>
-                        <li>Material 2</li>
-                        <li>Material 3</li>
+                        <li>Copper coins</li>
+                        <li>Zinc washers</li>
+                        <li>Cardboard</li>
+                        <li>Vinegar</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
+                <!-- Sound Wave experiment card -->
                 <div class="experiment-card">
-                    <h3>Experiment 3</h3>
-                    <p>Description of Experiment 3</p>
+                    <h3>Sound Wave Visualizer</h3>
+                    <p>Visualize sound waves using a simple setup.</p>
+                    <!-- List of required materials -->
                     <ul class="materials">
-                        <li>Material 1</li>
-                        <li>Material 2</li>
-                        <li>Material 3</li>
+                        <li>Plastic cup</li>
+                        <li>Balloon</li>
+                        <li>Rubber band</li>
+                        <li>Small mirror</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
+                <!-- Egg Drop experiment card -->
                 <div class="experiment-card">
-                    <h3>Experiment 4</h3>
-                    <p>Description of Experiment 4</p>
+                    <h3>Egg Drop Challenge</h3>
+                    <p>Design a container to protect an egg from breaking when dropped.</p>
+                    <!-- List of required materials -->
                     <ul class="materials">
-                        <li>Material 1</li>
-                        <li>Material 2</li>
-                        <li>Material 3</li>
+                        <li>Raw egg</li>
+                        <li>Various materials (straws, paper, tape)</li>
+                        <li>Scissors</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
@@ -68,8 +86,9 @@
         </section>
     </main>
 
+    <!-- Footer with copyright and contact information -->
     <footer>
-        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
+        <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
