--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
+<!-- Main index page for Physics Fun Zone website -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character encoding and responsive viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics for Middle Schoolers</title>
+    <!-- Link to shared stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header section with site title and navigation -->
     <header>
         <h1>Hoos Exploring Physics</h1>
+        <!-- Main navigation menu -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,24 +25,29 @@
         </nav>
     </header>
 
+    <!-- Main content area -->
     <main>
+        <!-- Welcome section -->
         <section id="home">
             <h2>Welcome to Hoos Exploring Physics!</h2>
             <p>Learn physics through interactive lessons, fun games, and hands-on experiments!</p>
         </section>
 
+        <!-- Lessons preview section -->
         <section id="lessons">
             <h2>Physics Lessons</h2>
             <p>Explore our engaging lessons on gravity, motion, energy, and more.</p>
             <a href="lessons.html" class="button">Start Learning</a>
         </section>
 
+        <!-- Games preview section -->
         <section id="games">
             <h2>Games & Quizzes</h2>
             <p>Test your knowledge with fun physics games and quizzes.</p>
             <a href="games.html" class="button">Play Now</a>
         </section>
 
+        <!-- Experiments preview section -->
         <section id="experiments">
             <h2>Hands-on Experiments</h2>
             <p>Try these simple and safe experiments in the classroom!</p>
@@ -45,6 +55,7 @@
         </section>
     </main>
 
+    <!-- Footer with copyright and contact information -->
     <footer>
         <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
