--- a/lessons.html
+++ b/lessons.html
@@ -1,14 +1,19 @@
+<!-- Physics lessons page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character encoding and responsive viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics Lessons - Hoos Exploring Physics</title>
+    <!-- Link to shared stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header section with site title and navigation -->
     <header>
         <h1>Hoos Exploring Physics</h1>
+        <!-- Main navigation menu -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,36 +25,44 @@
         </nav>
     </header>
 
+    <!-- Main content area -->
     <main>
+        <!-- Lessons content section -->
         <section id="lessons-content">
             <h2>Physics Lessons</h2>
+            <!-- Grid of lesson cards -->
             <div class="lesson-grid">
+                <!-- Forces and Motion lesson card -->
                 <div class="lesson-card">
-                    <h3>Lesson 1</h3>
-                    <p>First Lesson to learn</p>
+                    <h3>Forces and Motion</h3>
+                    <p>Learn about Newton's laws of motion, gravity, and how objects move.</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
+                <!-- Energy and Work lesson card -->
                 <div class="lesson-card">
-                    <h3>Lesson 2</h3>
-                    <p>Second Lesson to learn</p>
+                    <h3>Energy and Work</h3>
+                    <p>Explore different forms of energy and how they transform.</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
+                <!-- Waves and Sound lesson card -->
                 <div class="lesson-card">
-                    <h3>Lesson 3</h3>
-                    <p>Third Lesson to learn</p>
+                    <h3>Waves and Sound</h3>
+                    <p>Discover how waves travel and how we hear sound.</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
+                <!-- Electricity and Magnetism lesson card -->
                 <div class="lesson-card">
-                    <h3>Lesson 4</h3>
-                    <p>Fourth Lesson to learn</p>
+                    <h3>Electricity and Magnetism</h3>
+                    <p>Learn about electric circuits and magnetic fields.</p>
                     <a href="#" class="button">Start Learning</a>
                 </div>
             </div>
         </section>
     </main>
 
+    <!-- Footer with copyright and contact information -->
     <footer>
-        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
+        <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
