--- a/games.html
+++ b/games.html
@@ -1,14 +1,19 @@
+<!-- Physics games and quizzes page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character encoding and responsive viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics Games - Hoos Exploring Physics</title>
+    <!-- Link to shared stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header section with site title and navigation -->
     <header>
         <h1>Hoos Exploring Physics</h1>
+        <!-- Main navigation menu -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,34 +25,42 @@
         </nav>
     </header>
 
+    <!-- Main content area -->
     <main>
+        <!-- Games content section -->
         <section id="games-content">
             <h2>Physics Games & Quizzes</h2>
+            <!-- Grid of game cards -->
             <div class="game-grid">
+                <!-- Gravity Runner game card -->
                 <div class="game-card">
-                    <h3>Game 1</h3>
-                    <p>Description of Game 1</p>
+                    <h3>Gravity Runner</h3>
+                    <p>Run and jump through obstacles while learning about gravity!</p>
                     <a href="#" class="button">Play Now</a>
                 </div>
+                <!-- Energy Quiz game card -->
                 <div class="game-card">
-                    <h3>Game 2</h3>
-                    <p>Description of Game 2</p>
-                    <a href="#" class="button">Start Game</a>
+                    <h3>Energy Quiz</h3>
+                    <p>Test your knowledge about different forms of energy.</p>
+                    <a href="#" class="button">Start Quiz</a>
                 </div>
+                <!-- Circuit Builder game card -->
                 <div class="game-card">
-                    <h3>Game 3</h3>
-                    <p>Description of Game 3</p>
+                    <h3>Circuit Builder</h3>
+                    <p>Build working circuits and learn about electricity.</p>
                     <a href="#" class="button">Play Now</a>
                 </div>
+                <!-- Motion Master game card -->
                 <div class="game-card">
-                    <h3>Game 4</h3>
-                    <p>Description of Game 4</p>
+                    <h3>Motion Master</h3>
+                    <p>Solve physics puzzles using Newton's laws of motion.</p>
                     <a href="#" class="button">Play Now</a>
                 </div>
             </div>
         </section>
     </main>
 
+    <!-- Footer with copyright and contact information -->
     <footer>
         <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
