added jeopardy pages

--- a/games.html
+++ b/games.html
@@ -44,11 +44,11 @@
                     <p>Test your knowledge about different forms of energy.</p>
                     <a href="#" class="button">Start Quiz</a>
                 </div>
-                <!-- Circuit Builder game card -->
+                <!-- Physics Jeopardy game card -->
                 <div class="game-card">
-                    <h3>Circuit Builder</h3>
-                    <p>Build working circuits and learn about electricity.</p>
-                    <a href="#" class="button">Play Now</a>
+                    <h3>Physics Jeopardy</h3>
+                    <p>Test your physics knowledge in a fun Jeopardy-style game!</p>
+                    <a href="jeopardy.html" class="button">Play Now</a>
                 </div>
                 <!-- Motion Master game card -->
                 <div class="game-card">
@@ -66,4 +66,4 @@
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
-</html> 
+</html>
