--- a/lessons.html
+++ b/lessons.html
@@ -36,7 +36,7 @@
                 <div class="lesson-card">
                     <h3>Forces and Motion</h3>
                     <p>Learn about Newton's laws of motion, gravity, and how objects move.</p>
-                    <a href="#" class="button">Start Learning</a>
+                    <a href="#force.html" class="button">Start Learning</a>
                 </div>
                 <!-- Energy and Work lesson card -->
                 <div class="lesson-card">
