--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="lessons.html">Lessons</a></li>
                 <li><a href="games.html">Games</a></li>
                 <li><a href="experiments.html">Experiments</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -33,6 +33,13 @@
             <p>Learn physics through interactive lessons, fun games, and hands-on experiments!</p>
         </section>
 
+    <!-- New Dora the Explorer section -->
+    <section id="dora">
+        <h2>Explore with Dora!</h2>
+        <img src="imgs/DoraTheExplorer.png" alt="Dora the Explorer swinging with Boots" style="max-width: 100%; height: auto;">
+        <p>Join Dora and Boots on an exciting journey to learn physics concepts in a fun and interactive way!</p>
+    </section>
+    
         <!-- Lessons preview section -->
         <section id="lessons">
             <h2>Physics Lessons</h2>
@@ -55,6 +62,8 @@
         </section>
     </main>
 
+
+    
     <!-- Footer with copyright and contact information -->
     <footer>
         <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
