--- a/experiments.html
+++ b/experiments.html
@@ -20,7 +20,7 @@
                 <li><a href="lessons.html">Lessons</a></li>
                 <li><a href="games.html">Games</a></li>
                 <li><a href="experiments.html">Experiments</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
