--- a/forces.html
+++ b/forces.html
@@ -1,1 +1,34 @@
+<!-- Main index page for Physics Fun Zone website -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Meta tags for character encoding and responsive viewport -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Physics for Middle Schoolers</title>
+    <!-- Link to shared stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Header section with site title and navigation -->
+    <header>
+        <h1>Hoos Exploring Physics</h1>
+        <!-- Main navigation menu -->
+    </header>
 
+    <!-- Main content area -->
+    <main>
+        <!-- Welcome section -->
+        <section id="home">
+            <h2>Welcome to Hoos Exploring Physics!</h2>
+        </section>
+
+      
+ 
+    <!-- Footer with copyright and contact information -->
+    <footer>
+        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
+        <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
+    </footer>
+</body>
+</html>
