--- a/forces.html
+++ b/forces.html
@@ -14,6 +14,15 @@
     <header>
         <h1>Hoos Exploring Physics</h1>
         <!-- Main navigation menu -->
+         <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="lessons.html">Lessons</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="experiments.html">Experiments</a></li>
+                <li><a href="#contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Main content area -->
