--- a/forces.html
+++ b/forces.html
@@ -32,8 +32,8 @@
             <h2>Welcome to Hoos Exploring Physics!</h2>
         </section>
 
-        <section id="force">
-            <a href="https://www.youtube.com/watch?v=IjXv3sh4f4I"> </a>
+        <section id="force">            
+        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=IjXv3sh4f4I"> </iframe>
         </section>
       
  
