--- a/energy.html
+++ b/energy.html
@@ -29,7 +29,7 @@
     <main>
         <!-- Welcome section -->
         <section id="home">
-            <h2>Welcome to Hoos Exploring Physics!</h2>
+            <h2>Supplemental Videos: Energy and Work</h2>
         </section>
 
         <section id="force">            
