--- a/lessons.html
+++ b/lessons.html
@@ -42,7 +42,7 @@
                 <div class="lesson-card">
                     <h3>Energy and Work</h3>
                     <p>Explore different forms of energy and how they transform.</p>
-                    <a href="#" class="button">Start Learning</a>
+                    <a href="energy.html" class="button">Start Learning</a>
                 </div>
                 <!-- Waves and Sound lesson card -->
                 <div class="lesson-card">
