--- a/questions/question1.html
+++ b/questions/question1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Physics Jeopardy</h1>
+        <h1>Physics Jeopardy<a href="jeopardy.html">Home</a></li></h1>
     </header>
     <main>
         <div class="question-container">
