--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Contact Us</h1>
+        <h1>Hoos Exploring Physics</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
