--- a/questions/question1.html
+++ b/questions/question1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-       <a href="jeopardy.html"><h1>Physics Jeopardy</h1></a>
+      <h1>Physics Jeopardy</h1>
     </header>
     <main>
         <div class="question-container">
@@ -27,5 +27,6 @@
             document.getElementById("feedback").style.display = "block";
         });
     </script>
+    <a href="jeopardy.html" target="_blank" class="button">Return to Main Menu</a>
 </body>
 </html>
