--- a/questions/question10.html
+++ b/questions/question10.html
@@ -26,6 +26,7 @@
             event.preventDefault();
             document.getElementById("feedback").style.display = "block";
         });
+        <a href="jeopardy.html" target="_blank" class="button">Return to Main Menu</a>
     </script>
 </body>
 </html>
