--- a/games.html
+++ b/games.html
@@ -20,7 +20,7 @@
                 <li><a href="lessons.html">Lessons</a></li>
                 <li><a href="games.html">Games</a></li>
                 <li><a href="experiments.html">Experiments</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
         </nav>
     </header>
