--- a/games.html
+++ b/games.html
@@ -48,7 +48,7 @@
                 <div class="game-card">
                     <h3>Physics Jeopardy</h3>
                     <p>Test your physics knowledge in a fun Jeopardy-style game!</p>
-                    <a href="jeopardy.html" class="button">Play Now</a>
+                    <a href="jeopardy.html" target="_blank" class="button">Play Now</a>
                 </div>
                 <!-- Motion Master game card -->
                 <div class="game-card">
