--- a/forces.html
+++ b/forces.html
@@ -33,7 +33,9 @@
         </section>
 
         <section id="force">            
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=IjXv3sh4f4I"> </iframe>
+        <iframe width="420" height="315" src="www.youtube.com/watch?v=JGO_zDWmkvk">TED-Ed: Newton's Laws</iframe>
+        <iframe width="420" height="315" src="www.youtube.com/watch?v=IjXv3sh4f4I">Demo Video</iframe>
+        <iframe width="420" height="315" src="www.youtube.com/watch?v=yUp4W9htmuY">Newton's Laws Song</iframe>
         </section>
       
  
