--- a/lessons.html
+++ b/lessons.html
@@ -54,7 +54,7 @@
                 <div class="lesson-card">
                     <h3>Electricity and Magnetism</h3>
                     <p>Learn about electric circuits and magnetic fields.</p>
-                    <a href="#" class="button">Start Learning</a>
+                    <a href="electricity.html" class="button">Start Learning</a>
                 </div>
             </div>
         </section>
