--- a/energy.html
+++ b/energy.html
@@ -33,7 +33,8 @@
         </section>
 
         <section id="force">            
-        <iframe width="420" height="315" src="youtu.be/yc2-363MIQs"> </iframe>
+        <iframe width="420" height="315" src="www.youtube.com/watch?v=Q0LBegPWzrg">Energy Animation Video</iframe>
+        <iframe width="420" height="315" src="www.youtube.com/watch?v=rkZZjM6Oiw8">What is Energy?</iframe>
         </section>
       
  
