--- a/energy.html
+++ b/energy.html
@@ -35,6 +35,7 @@
         <section id="force">            
         <iframe width="420" height="315" src="www.youtube.com/watch?v=Q0LBegPWzrg">Energy Animation Video</iframe>
         <iframe width="420" height="315" src="www.youtube.com/watch?v=rkZZjM6Oiw8">What is Energy?</iframe>
+        <iframe width="420" height="315" src="www.youtube.com/watch?v=St2q6oGO6xo">Kinetic and Potential Energy Song</iframe>
         </section>
       
  
