--- a/electricity.html
+++ b/electricity.html
@@ -33,7 +33,8 @@
         </section>
 
         <section id="force">            
-        <iframe width="420" height="315" src="youtu.be/yc2-363MIQs"> </iframe>
+        <iframe width="420" height="315" src="youtu.be/yc2-363MIQs">Electricity</iframe>
+        <iframe width="420" height="315" src="www.youtube.com/watch?v=yXCeuSiTOug">Magnetism</iframe>
         </section>
       
  
