--- a/waves.html
+++ b/waves.html
@@ -1,1 +1,48 @@
+<!-- Main index page for Physics Fun Zone website -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Meta tags for character encoding and responsive viewport -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Physics for Middle Schoolers</title>
+    <!-- Link to shared stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Header section with site title and navigation -->
+    <header>
+        <h1>Hoos Exploring Physics</h1>
+        <!-- Main navigation menu -->
+         <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="lessons.html">Lessons</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="experiments.html">Experiments</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!-- Main content area -->
+    <main>
+        <!-- Welcome section -->
+        <section id="home">
+            <h2>Supplemental Videos: Waves and Sound</h2>
+        </section>
+
+        <section id="force">            
+        <iframe width="420" height="315" src=""></iframe>
+        <iframe width="420" height="315" src=""></iframe>
+        <iframe width="420" height="315" src=""></iframe>
+        </section>
+      
+ 
+    <!-- Footer with copyright and contact information -->
+    <footer>
+        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
+        <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
+    </footer>
+</body>
+</html>
