--- a/electricity.html
+++ b/electricity.html
@@ -29,7 +29,7 @@
     <main>
         <!-- Welcome section -->
         <section id="home">
-            <h2>Supplemental Videos: Energy and Work</h2>
+            <h2>Supplemental Videos: Electricity and Magnetism</h2>
         </section>
 
         <section id="force">            
