--- a/lessons.html
+++ b/lessons.html
@@ -48,7 +48,7 @@
                 <div class="lesson-card">
                     <h3>Waves and Sound</h3>
                     <p>Discover how waves travel and how we hear sound.</p>
-                    <a href="#" class="button">Start Learning</a>
+                    <a href="waves.html" class="button">Start Learning</a>
                 </div>
                 <!-- Electricity and Magnetism lesson card -->
                 <div class="lesson-card">
