--- a/forces.html
+++ b/forces.html
@@ -33,9 +33,11 @@
         </section>
 
         <section id="force">            
-        <iframe width="420" height="315" src="www.youtube.com/watch?v=JGO_zDWmkvk">TED-Ed: Newton's Laws</iframe>
-        <iframe width="420" height="315" src="www.youtube.com/watch?v=IjXv3sh4f4I">Demo Video</iframe>
-        <iframe width="420" height="315" src="www.youtube.com/watch?v=yUp4W9htmuY">Newton's Laws Song</iframe>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=JGO_zDWmkvk" target="_blank">TED-Ed: Newton's Laws</a></li>
+                <li><a href="https://www.youtube.com/watch?v=IjXv3sh4f4I" target="_blank">Demo Video</a></li>
+                <li><a href="https://www.youtube.com/watch?v=yUp4W9htmuY" target="_blank">Newton's Laws Song</a></li>
+            </ul>
         </section>
       
  
