--- a/questions/question1.html
+++ b/questions/question1.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question</title>
     <link rel="stylesheet" href="../jeopardy.css">
+    <style>
+        body {
+            color: white;
+        }
+        .button {
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -27,6 +35,12 @@
             document.getElementById("feedback").style.display = "block";
         });
     </script>
-    <a href="jeopardy.html" target="_blank" class="button">Return to Main Menu</a>
+    <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
+    <script>
+        function returnToMain() {
+            // Preserve localStorage state
+            window.location.href = "../jeopardy.html";
+        }
+    </script>
 </body>
 </html>
